--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,34 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Cd</title>
+  <title>CodeDaily — Daily JavaScript &amp; Python Coding Challenges</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <meta
+    name="description"
+    content="CodeDaily is a startup-style learning lab with daily JavaScript and Python coding challenges across 7-day and 28-day tracks. Build a consistent coding habit with clear, focused tasks."
+  />
+
+  <!-- Open Graph / social sharing -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="CodeDaily — Daily JavaScript &amp; Python Coding Challenges" />
+  <meta
+    property="og:description"
+    content="Daily JS and Python challenges with 7-day and 28-day tracks, starter code, and notes to help you build a lasting coding habit."
+  />
+  <meta property="og:image" content="/assets/cd-banner.png" />
+  <meta property="og:url" content="https://codedaily" />
+
+  <!-- Twitter card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="CodeDaily — Daily JavaScript &amp; Python Coding Challenges" />
+  <meta
+    name="twitter:description"
+    content="Practice a little, learn a lot. Daily JavaScript and Python coding challenges with clear tracks from basics to advanced."
+  />
+  <meta name="twitter:image" content="/assets/cd-banner.png" />
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
