--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,7 @@
     name="twitter:description"
     content="Practice a little, learn a lot. Daily JavaScript and Python coding challenges with clear tracks from basics to advanced."
   />
+  <meta name="google-site-verification" content="YMkO1KmW2NuddGgJWzEvIBDKgqHOJ7zQjqEkaPz_YaE" />
   <meta name="twitter:image" content="/assets/cd-banner.png" />
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
